--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "@types/angular-resource": "^1.5.6",
     "@types/angular-route": "^1.3.2",
     "@types/angular-sanitize": "^1.3.3",
-    "@types/jasmine": "2.5.36",
     "@types/body-parser": "0.0.33",
     "@types/bootstrap": "^3.3.32",
     "@types/connect-flash": "0.0.31",
@@ -64,13 +63,14 @@
     "@types/es6-shim": "^0.31.32",
     "@types/express": "^4.0.35",
     "@types/express-session": "0.0.32",
+    "@types/jasmine": "2.5.36",
     "@types/jquery": "^2.0.40",
+    "@types/mongoose": "^4.7.8",
     "@types/morgan": "^1.7.32",
     "@types/node": "^7.0.5",
     "@types/passport": "^0.3.3",
     "@types/passport-local": "^1.0.29",
-
-     "angular2-template-loader": "^0.6.0",
+    "angular2-template-loader": "^0.6.0",
     "awesome-typescript-loader": "^3.0.4",
     "babel-cli": "^6.16.0",
     "babel-preset-angular2": "^0.0.2",
